# hermes-pet

./: .gitignore  AGENTS.md  README.md  package-lock.json
docs/: UI-UX-Style.md  lessons.md  progress.md  tech.md
docs/features/: cowork-bubble.md  dialog-bubble.md  drag-and-drop.md  mode-switching.md  normal-mode.md  research-bubble.md  settings.md  work-mode.md
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  runner.rs
src/components/: BubbleStack.css  BubbleStack.tsx  PetCircle.css  PetCircle.tsx
src/hooks/: useHermesTask.ts
src/lib/: prompts.ts
